--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,3 +4,32 @@ $fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss"
+
+
+header
+    background-image: url('../../public/images/banner1.jpg')
+    background-size: cover
+    .sombre
+        background-color: black
+        opacity: 0.80
+        .container
+            padding-top: 30px
+            display: flex
+            nav 
+                display: flex
+                justify-content: space-around
+                margin-top: 20px
+                padding: 0
+                border-top: 1px solid rgba(184, 180, 180, 0.855)
+                border-bottom: 1px solid rgba(184, 180, 180, 0.855)
+                
+                a 
+                    color: white
+                    height: max-height
+                a:hover 
+                    background-color: #fa2323f5
+    #carouselContent
+        background: none
+        height: 100vh
+        
+            
