--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -22,14 +22,12 @@ header
                 padding: 0
                 border-top: 1px solid rgba(184, 180, 180, 0.855)
                 border-bottom: 1px solid rgba(184, 180, 180, 0.855)
-                
                 a 
                     color: white
                     height: max-height
                 a:hover 
                     background-color: #fa2323f5
-    #carouselContent
-        background: none
+    #DemoCarousel
+        position: relative
         height: 100vh
-        
             
