--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -27,7 +27,20 @@ header
                     height: max-height
                 a:hover 
                     background-color: #fa2323f5
-    #DemoCarousel
-        position: relative
+    #my-slider
+        position: absolute
         height: 100vh
             
+#s1
+    background-image: url('../../public/images/main_bg.jpg')
+    background-size: repeat
+    .s1_corps
+        text: center
+
+    .box_left_top
+        position: absolute
+        left: 15px
+    .box_right_top
+        position: absolute
+        right: 15px
+    
