--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -30,7 +30,9 @@ header
     left: 200px
     width: 100vh
     height: 500px
-
+.header_bottom_deco
+    background-image: url("../../public/images/bottom_decoration_img.png")
+    height: 10px
 
 /* section1*/
 
@@ -40,11 +42,12 @@ header
             
 #s1
     background-image: url('../../public/images/main_bg.jpg')
-    .s1_container
-        
+    .s1_container 
+        margin-top: 20px
     .s1_corps
         text: center
-
+        padding-top: 50px
+        
     .box_left_top
         position: absolute
         left: 15px
@@ -82,4 +85,27 @@ header
         background-color: rgb(216, 215, 215)
         color: red
         height: 29px
-    
+    .box_left_top
+        position: absolute
+        left: 0
+        top: 0 
+    .box_right_top 
+        position: absolute
+        right: 0
+        top: 0
+    .box_left_bottom
+        position: absolute
+        left: 0
+        bottom: 0
+    .box_right_bottom
+        position: absolute
+        right: 0
+        bottom: 0
+/* section 2*/
+#s2
+    background-image: url("../../public/images/team_background.jpg")
+
+    .chef_img 
+        margin-top: 30px
+        margin-bottom: 30px
+        border-bottom: 1px solid rgb(216, 215, 215)
