--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -109,3 +109,30 @@ header
         margin-top: 30px
         margin-bottom: 30px
         border-bottom: 1px solid rgb(216, 215, 215)
+/* section 3*/
+#s3
+    background-image: url('../../public/images/main_bg.jpg')
+    position: relative
+
+    .top_left
+        position: absolute
+        top: 0
+        left: 0
+    .top_right 
+        position: absolute
+        top: 0
+        right: 0
+    .bottom_left
+        position: absolute  
+        bottom: 0
+        left: 0
+    .bottom_right
+        position: absolute
+        bottom: 0
+        right: 0
+    form 
+        background-image: url("../../public/images/book_table_bg.jpg")
+        border-radius: 20px
+        p  
+            color: white
+            padding-top: 20px  
