--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12061,4 +12061,31 @@ header .grd_nav {
     margin-bottom: 30px;
     border-bottom: 1px solid #d8d7d7; }
 
+/* section 3 */
+#s3 {
+  background-image: url("../../public/images/main_bg.jpg");
+  position: relative; }
+  #s3 .top_left {
+    position: absolute;
+    top: 0;
+    left: 0; }
+  #s3 .top_right {
+    position: absolute;
+    top: 0;
+    right: 0; }
+  #s3 .bottom_left {
+    position: absolute;
+    bottom: 0;
+    left: 0; }
+  #s3 .bottom_right {
+    position: absolute;
+    bottom: 0;
+    right: 0; }
+  #s3 form {
+    background-image: url("../../public/images/book_table_bg.jpg");
+    border-radius: 20px; }
+    #s3 form p {
+      color: white;
+      padding-top: 20px; }
+
 /*# sourceMappingURL=style.css.map */
