--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -62,8 +62,7 @@ header
             margin-left: 5px
             border-radius: 0
             i 
-                color: rgb(206, 203, 203)
-        a 
+                color: rgb(206, 203, 203) 
         a:hover 
             border-right: 3px solid red
             i
@@ -132,7 +131,18 @@ header
         right: 0
     form 
         background-image: url("../../public/images/book_table_bg.jpg")
-        border-radius: 20px
+        background-size:  cover 
+        background-repeat: no-repeat 
+        border-radius: 15px
         p  
-            color: white
-            padding-top: 20px  
+            color: white 
+            padding-top: 30px  
+        .s3_form
+            padding: 40px 
+            .s3_form_col
+                .s3_input
+                    border-radius: 13px
+                    margin-bottom: 20px 
+        .s3_button_book 
+            border-radius: 30px 
+            margin-bottom: 20px 
