--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -74,7 +74,7 @@ header
         align-items: center
         padding-top: 7px
         padding-bottom: 7px
-        border-bottom: 1px rgb(206, 203, 203) solid
+        border-bottom: 1px rgb(206, 203, 203) dotted
         width: 90%
     .s1_menu_img 
         width: 110px
@@ -146,3 +146,21 @@ header
         .s3_button_book 
             border-radius: 30px 
             margin-bottom: 20px 
+
+/*section 4*/
+#s4
+    background-image: url("../../public/images/testimonials_background.jpg")
+/*section 5*/
+#s5
+    background-image: url("../../public/images/main_bg.jpg")
+/* footer */
+.footer
+    background-image: url("../../public/images/footer_background.jpg")
+    .footer_tags
+        background-color: red 
+        color: white
+        border: 1px solid white
+        border-radius: 15px
+.footer_end
+    background-color: red
+
