--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12026,7 +12026,7 @@ header .grd_nav {
     align-items: center;
     padding-top: 7px;
     padding-bottom: 7px;
-    border-bottom: 1px #cecbcb solid;
+    border-bottom: 1px #cecbcb dotted;
     width: 90%; }
   #s1 .s1_menu_img {
     width: 110px;
@@ -12097,5 +12097,25 @@ header .grd_nav {
     #s3 form .s3_button_book {
       border-radius: 30px;
       margin-bottom: 20px; }
+
+/*section 4 */
+#s4 {
+  background-image: url("../../public/images/testimonials_background.jpg"); }
+
+/*section 5 */
+#s5 {
+  background-image: url("../../public/images/main_bg.jpg"); }
+
+/* footer */
+.footer {
+  background-image: url("../../public/images/footer_background.jpg"); }
+  .footer .footer_tags {
+    background-color: red;
+    color: white;
+    border: 1px solid white;
+    border-radius: 15px; }
+
+.footer_end {
+  background-color: red; }
 
 /*# sourceMappingURL=style.css.map */
