--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -27,10 +27,10 @@ header
         a:hover 
             background-color: red 
 #carouselExampleIndicators
-    position: relative
-    top: 500px
-    left: 200px
-    width: 100vh
+    margin-left: auto
+    margin-right: auto
+    margin-top: 18vh
+    width: 100%
     height: 500px
 .header_bottom_deco
     background-image: url("../../public/images/bottom_decoration_img.png")
@@ -190,15 +190,27 @@ header
     margin-left: 0
 /*section 5*/
 #s5
+    .s5_contact_div
+        background-color: red 
+        width: 40% 
+        border-radius: 10px 
+        padding: 25px 20px 15px 20px 
+        margin-bottom: 25px  
+        hr 
+            color: rgb(255, 255, 255)
+            background-color: rgb(255, 254, 254) 
 /* footer */
 .footer
+    color: white 
     background-image: url("../../public/images/footer_background.jpg")
-
-    .footer_tags
-        background-color: red 
-        color: white
-        border: 1px solid white
-        border-radius: 15px
+.footer_tags
+    background-color: red 
+    border: 1px solid white 
+    border-radius: 15px 
+    padding: 5px 10px   
+    margin: 3px  
 .footer_end
     background-color: red
+    height: 80px
+
 
