--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,6 +8,7 @@ body
     background-image: url("../../public/images/main_bg.jpg")
 
 header
+    background-image: url("./public/images/banner1.jpg")
     .sombre
         position: absolute
         width: 100%
@@ -29,10 +30,19 @@ header
 #carouselExampleIndicators
     margin-left: auto
     margin-right: auto
-    margin-top: 18vh
+    margin-top: 20vh  
     width: 100%
     height: 500px
-.header_bottom_deco
+    align-items: center 
+.carousel-indicators li 
+    width: 10px 
+    height: 10px
+    border-radius: 100%
+
+.carousel_text 
+    padding-top: 100px
+    font-size: 50px 
+.header_bottom_deco 
     background-image: url("../../public/images/bottom_decoration_img.png")
     height: 10px
 
