--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11964,17 +11964,34 @@ readers do not read off random characters that represent icons */
 .fab {
   font-family: 'Font Awesome 5 Brands'; }
 
+@font-face {
+  font-family: courgette;
+  src: url("../../public/fonts/Cougette-Regular.ttf"); }
 body {
   background-image: url("../../public/images/main_bg.jpg"); }
 
 header {
-  background-image: url("./public/images/banner1.jpg"); }
-  header .sombre {
-    position: absolute;
-    width: 100%;
-    height: 842px;
-    background-color: black;
-    opacity: 0.8; }
+  background-image: url("../../public/images/banner1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
+  header .container-fluid {
+    background-color: rgba(0, 0, 0, 0.822); }
+    header .container-fluid nav {
+      display: flex;
+      justify-content: center; }
+      header .container-fluid nav ul {
+        display: flex;
+        align-items: center;
+        margin: 0;
+        padding: 0; }
+        header .container-fluid nav ul a {
+          color: white;
+          border-bottom: 1px solid white;
+          border-top: 1px solid white; }
+        header .container-fluid nav ul a:hover {
+          background-color: rgba(255, 0, 0, 0.596);
+          color: white; }
   header .grd_nav {
     padding-left: 190px; }
     header .grd_nav img {
@@ -11987,30 +12004,19 @@ header {
     header .grd_nav a:hover {
       background-color: red; }
 
-#carouselExampleIndicators {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20vh;
-  width: 100%;
-  height: 500px;
-  align-items: center; }
-
-.carousel-indicators li {
-  width: 10px;
-  height: 10px;
-  border-radius: 100%; }
-
 .carousel_text {
   padding-top: 100px;
   font-size: 50px; }
 
 .header_bottom_deco {
   background-image: url("../../public/images/bottom_decoration_img.png");
-  height: 10px; }
+  height: 10px;
+  background-color: rgba(0, 0, 0, 0.822); }
 
-/* section1 */
 #s1 .s1_container {
-  margin-top: 20px; }
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-bottom: 70px; }
 #s1 .s1_corps {
   text: center;
   padding-top: 50px; }
@@ -12029,9 +12035,9 @@ header {
   #s1 #v-pills-tab a i {
     color: #cecbcb; }
 #s1 #v-pills-tab a:hover {
-  border-right: 3px solid red; }
+  border-right: 3px solid #cf2729; }
   #s1 #v-pills-tab a:hover i {
-    color: red; }
+    color: #cf2729; }
 #s1 .s1_menu {
   border-left: 1px solid #cecbcb; }
 #s1 .s1_ligne_menu {
@@ -12080,6 +12086,13 @@ header {
       border-bottom: 1px solid #d8d7d7; }
 
 /* section 3 */
+.s3_titre {
+  padding-top: 40px; }
+
+.s3_deco_line {
+  margin-top: -30px;
+  padding-bottom: 20px; }
+
 #s3 {
   position: relative; }
   #s3 .top_left {
@@ -12123,7 +12136,6 @@ header {
   border: 4px #d8d7d7 solid; }
 
 .s3_info_blog {
-  background-color: red;
   color: white;
   border-radius: 5px;
   position: absolute;
@@ -12141,7 +12153,9 @@ header {
   .s3_button button {
     border-radius: 30px;
     border: none;
-    padding: 7px 15px; }
+    padding: 7px 15px;
+    margiin-top: 20px;
+    margin-bottom: 40px; }
 
 /*section 4 */
 #s4 {
@@ -12161,29 +12175,31 @@ header {
 
 /*section 5 */
 #s5 .s5_contact_div {
-  background-color: red;
   width: 40%;
   border-radius: 10px;
   padding: 25px 20px 15px 20px;
   margin-bottom: 25px; }
   #s5 .s5_contact_div hr {
     color: white;
-    background-color: #fffefe; }
+    background-color: white; }
 
 /* footer */
+.footer_deco {
+  background-image: url("../../public/images/footer_bottom_decoration_img.png");
+  height: 10px;
+  background-color: black; }
+
 .footer {
   color: white;
   background-image: url("../../public/images/footer_background.jpg"); }
 
 .footer_tags {
-  background-color: red;
   border: 1px solid white;
   border-radius: 15px;
   padding: 5px 10px;
   margin: 3px; }
 
 .footer_end {
-  background-color: red;
   height: 80px; }
 
 /*# sourceMappingURL=style.css.map */
