--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,19 +4,43 @@ $fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss"
+
+@font-face 
+    font-family: courgette
+    src: url("../../public/fonts/Cougette-Regular.ttf")
+    
 body 
-    background-image: url("../../public/images/main_bg.jpg")
+    background-image: url("../../public/images/main_bg.jpg") 
+
+    
 
 header
-    background-image: url("./public/images/banner1.jpg")
-    .sombre
-        position: absolute
-        width: 100%
-        height: 842px  
-        background-color: black
-        opacity: 0.80 
+    background-image: url("../../public/images/banner1.jpg")  
+    background-size: cover 
+    background-repeat: no-repeat
+    background-position: center
+    .container-fluid 
+        background-color: rgba(0, 0, 0, 0.822)
+        nav 
+            display: flex 
+            justify-content: center
+            ul  
+                display: flex 
+                align-items: center 
+                margin: 0  
+                padding: 0
+                a 
+                    color: white
+                    border-bottom: 1px solid white
+                    border-top: 1px solid white 
+                a:hover 
+                    background-color: rgba(255, 0, 0, 0.596) 
+                    color: white
+
+        
     .grd_nav
         padding-left: 190px
+
         img 
             margin: 0 20px 0 20px 
             
@@ -27,27 +51,15 @@ header
             border-bottom: 1px solid white
         a:hover 
             background-color: red 
-#carouselExampleIndicators
-    margin-left: auto
-    margin-right: auto
-    margin-top: 20vh  
-    width: 100%
-    height: 500px
-    align-items: center 
-.carousel-indicators li 
-    width: 10px 
-    height: 10px
-    border-radius: 100%
 
 .carousel_text 
     padding-top: 100px
-    font-size: 50px 
+    font-size: 50px  
 .header_bottom_deco 
     background-image: url("../../public/images/bottom_decoration_img.png")
-    height: 10px
-
-/* section1*/
-
+    height: 10px   
+    background-color: rgba(0, 0, 0, 0.822)
+ 
 
 
 
@@ -55,6 +67,8 @@ header
 #s1
     .s1_container 
         margin-top: 20px
+        margin-bottom: 20px 
+        padding-bottom: 70px
     .s1_corps
         text: center
         padding-top: 50px
@@ -75,9 +89,9 @@ header
             i 
                 color: rgb(206, 203, 203) 
         a:hover 
-            border-right: 3px solid red
+            border-right: 3px solid rgb(207, 39, 41) 
             i
-                color: red
+                color: rgb(207, 39, 41) 
     .s1_menu
         border-left: 1px solid rgb(206, 203, 203) 
     .s1_ligne_menu
@@ -120,14 +134,18 @@ header
         margin-top: 30px
         margin-bottom: 30px
         border-bottom: 1px solid rgb(216, 215, 215)
-        justify-content: space-around 
+        justify-content: space-around  
         .s2_img_chef
             width: 200px 
             border-bottom: 1px solid rgb(216, 215, 215)   
 /* section 3*/
+.s3_titre
+    padding-top: 40px 
+.s3_deco_line
+    margin-top: -30px  
+    padding-bottom: 20px 
 #s3
     position: relative
-
     .top_left
         position: absolute
         top: 0
@@ -167,8 +185,7 @@ header
     margin: auto
     border-radius: 10px
     border: 4px rgb(216, 215, 215) solid
-.s3_info_blog
-    background-color: red  
+.s3_info_blog 
     color: white  
     border-radius: 5px   
     position: absolute 
@@ -184,7 +201,9 @@ header
     button  
         border-radius: 30px   
         border: none 
-        padding: 7px 15px  
+        padding: 7px 15px
+        margiin-top: 20px  
+        margin-bottom: 40px 
 /*section 4*/ 
 #s4 
     background-image: url("../../public/images/testimonials_background.jpg")
@@ -200,27 +219,28 @@ header
     margin-left: 0
 /*section 5*/
 #s5
-    .s5_contact_div
-        background-color: red 
+    .s5_contact_div 
         width: 40% 
         border-radius: 10px 
         padding: 25px 20px 15px 20px 
         margin-bottom: 25px  
         hr 
             color: rgb(255, 255, 255)
-            background-color: rgb(255, 254, 254) 
+            background-color: rgb(255, 255, 255) 
 /* footer */
+.footer_deco
+    background-image: url("../../public/images/footer_bottom_decoration_img.png")   
+    height: 10px 
+    background-color: rgb(0, 0, 0)
 .footer
     color: white 
     background-image: url("../../public/images/footer_background.jpg")
 .footer_tags
-    background-color: red 
     border: 1px solid white 
     border-radius: 15px 
     padding: 5px 10px   
     margin: 3px  
 .footer_end
-    background-color: red
     height: 80px
 
 
