--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11965,10 +11965,13 @@ readers do not read off random characters that represent icons */
   font-family: 'Font Awesome 5 Brands'; }
 
 @font-face {
-  font-family: courgette;
-  src: url("../../public/fonts/Cougette-Regular.ttf"); }
+  font-family: "courgette";
+  src: url("../../public/fonts/Cougette-Regular.ttf") format("truetype"); }
 body {
   background-image: url("../../public/images/main_bg.jpg"); }
+
+.courgette {
+  font-family: "Courgette", cursive; }
 
 header {
   background-image: url("../../public/images/banner1.jpg");
@@ -12004,6 +12007,15 @@ header {
     header .grd_nav a:hover {
       background-color: red; }
 
+.carousel-indicators li {
+  width: 10px;
+  height: 10px;
+  border-radius: 100%; }
+  .carousel-indicators li.active, .carousel-indicators li:hover {
+    width: 12px;
+    height: 12px;
+    background-color: #f6f6f8; }
+
 .carousel_text {
   padding-top: 100px;
   font-size: 50px; }
@@ -12020,6 +12032,8 @@ header {
 #s1 .s1_corps {
   text: center;
   padding-top: 50px; }
+  #s1 .s1_corps p {
+    width: 600px; }
 #s1 .box_left_top {
   position: absolute;
   left: 15px; }
@@ -12094,7 +12108,10 @@ header {
   padding-bottom: 20px; }
 
 #s3 {
+  margin-bottom: 50px;
   position: relative; }
+  #s3 .container {
+    padding-bottom: 100px; }
   #s3 .top_left {
     position: absolute;
     top: 0;
@@ -12133,19 +12150,28 @@ header {
   justify-content: space-around;
   margin: auto;
   border-radius: 10px;
-  border: 4px #d8d7d7 solid; }
+  border: 4px #d8d7d7 solid;
+  width: 400px; }
 
 .s3_info_blog {
-  color: white;
-  border-radius: 5px;
+  font-size: large;
   position: absolute;
-  top: 250px;
-  left: 27%;
-  padding: 10px; }
+  color: white;
+  padding: 5px 15px 5px 15px;
+  border-radius: 5px;
+  left: 130px;
+  bottom: -35px; }
 
 .s3_text_blog {
+  position: absolute;
   margin-top: 20px;
-  margin-left: 42.5px; }
+  margin-left: 42.5px;
+  left: 90px; }
+
+.blog_number {
+  color: white;
+  font-size: 25px;
+  font-weight: bold; }
 
 .s3_button {
   display: flex;
@@ -12153,14 +12179,17 @@ header {
   .s3_button button {
     border-radius: 30px;
     border: none;
-    padding: 7px 15px;
-    margiin-top: 20px;
-    margin-bottom: 40px; }
+    padding: 10px 20px;
+    margin-top: 70px;
+    margin-bottom: 20px; }
 
 /*section 4 */
 #s4 {
   background-image: url("../../public/images/testimonials_background.jpg");
   padding-bottom: 30px; }
+  #s4 h1 {
+    padding-top: 70px;
+    margin-bottom: 70px; }
 
 .s4_img_testimonial {
   width: 150px;
@@ -12174,13 +12203,15 @@ header {
   margin-left: 0; }
 
 /*section 5 */
+#s5 .s5_margin_top {
+  margin-top: 40px; }
 #s5 .s5_contact_div {
-  width: 40%;
+  width: 30%;
   border-radius: 10px;
   padding: 25px 20px 15px 20px;
-  margin-bottom: 25px; }
+  margin-bottom: 25px;
+  margin-top: 40px; }
   #s5 .s5_contact_div hr {
-    color: white;
     background-color: white; }
 
 /* footer */
@@ -12201,5 +12232,10 @@ header {
 
 .footer_end {
   height: 80px; }
+
+/*Media Queries */
+@media (min-width: 0px) and (max-width: 400px) {
+  .container-fluid ul {
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
