--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11989,9 +11989,10 @@ header {
         margin: 0;
         padding: 0; }
         header .container-fluid nav ul a {
+          padding: 15px;
           color: white;
-          border-bottom: 1px solid white;
-          border-top: 1px solid white; }
+          border-bottom: 1px solid #817f7f;
+          border-top: 1px solid #817f7f; }
         header .container-fluid nav ul a:hover {
           background-color: rgba(255, 0, 0, 0.596);
           color: white; }
@@ -12234,8 +12235,5 @@ header {
   height: 80px; }
 
 /*Media Queries */
-@media (min-width: 0px) and (max-width: 400px) {
-  .container-fluid ul {
-    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
