--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -30,10 +30,12 @@ header
                 align-items: center 
                 margin: 0  
                 padding: 0
+
                 a 
+                    padding: 15px       
                     color: white
-                    border-bottom: 1px solid white
-                    border-top: 1px solid white 
+                    border-bottom: 1px solid rgb(129, 127, 127)
+                    border-top: 1px solid rgb(129, 127, 127)  
                 a:hover 
                     background-color: rgba(255, 0, 0, 0.596) 
                     color: white
@@ -280,9 +282,6 @@ header
 /*Media Queries*/
 
 @media (min-width: 0px) AND (max-width: 400px)
-    .container-fluid 
-        ul 
-            width: 100%  
     
 
 
